--- a/composer.json
+++ b/composer.json
@@ -20,10 +20,5 @@
     "autoload": {
         "psr-0": { "DavidJegat\\AsseticMinifierBundle": "" }
     },
-    "target-dir": "DavidJegat/AsseticMinifierBundle",
-    "extra": {
-        "branch-alias": {
-            "dev-master": "1.0.0"
-        }
-    }
+    "target-dir": "DavidJegat/AsseticMinifierBundle"
 }
